[project]
name = "comfyui_tensorrt"
description = "TensorRT Node for ComfyUI\nThis node enables the best performance on NVIDIA RTX™ Graphics Cards  (GPUs) for Stable Diffusion by leveraging NVIDIA TensorRT."
version = "0.1.7"
license = { file = "LICENSE" }
dependencies = [
  "tensorrt-cu12>=10.3.0",
  "tensorrt-cu12-libs>=10.3.0",
  "onnx<1.16.2",
  "onnxscript",
]

[project.urls]
Repository = "https://github.com/comfyanonymous/ComfyUI_TensorRT"

[tool.comfy]
PublisherId = "comfy"
DisplayName = "ComfyUI_TensorRT"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_tensorrt"]
package-dir = { "comfyui_tensorrt" = "." }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"

[tool.uv.sources]
"tensorrt-cu12" = { index = "nvidia" }

[project.entry-points."comfyui.custom_nodes"]
comfyui_tensorrt = "comfyui_tensorrt"