[project]
name = "comfyui_tensorrt"
description = "TensorRT Node for ComfyUI\nThis node enables the best performance on NVIDIA RTX™ Graphics Cards  (GPUs) for Stable Diffusion by leveraging NVIDIA TensorRT."
version = "0.1.7"
license = { file = "LICENSE" }
dependencies = [
    "comfyui>=0.2.3",
    # peacefully installs and will not do anything on macOS
    "nvidia-stub>=0.0.1; platform_system != 'Darwin'",
    "tensorrt-cu12>=10.3.0; platform_system != 'Darwin'",
    "tensorrt-cu12-bindings>=10.3.0; platform_system != 'Darwin'",
    "tensorrt-cu12-libs>=10.3.0; platform_system != 'Darwin'",
    "onnxscript>=0.0.1",
]

[project.urls]
Repository = "https://github.com/comfyanonymous/ComfyUI_TensorRT"

[tool.comfy]
PublisherId = "comfy"
DisplayName = "ComfyUI_TensorRT"
Icon = ""

[build-system]
requires = ["setuptools", "wheel", "nvidia-stub"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_tensorrt"]
package-dir = { "comfyui_tensorrt" = "." }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"

[tool.uv.sources]
"tensorrt-cu12" = { index = "nvidia" }
"tensorrt-cu12-libs" = { index = "nvidia" }
"tensorrt-cu12-bindings" = { index = "nvidia" }
"tensorrt" = { index = "nvidia" }

[project.entry-points."comfyui.custom_nodes"]
comfyui_tensorrt = "comfyui_tensorrt"