[project]
name = "comfyui_tensorrt"
description = "TensorRT Node for ComfyUI\nThis node enables the best performance on NVIDIA RTX™ Graphics Cards  (GPUs) for Stable Diffusion by leveraging NVIDIA TensorRT."
version = "0.1.7"
license = { file = "LICENSE" }
dependencies = [
  "comfyui>=0.2.3",
]

[project.urls]
Repository = "https://github.com/comfyanonymous/ComfyUI_TensorRT"

[tool.comfy]
PublisherId = "comfy"
DisplayName = "ComfyUI_TensorRT"
Icon = ""

[build-system]
requires = ["setuptools", "wheel", "nvidia-stub"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_tensorrt"]
package-dir = { "comfyui_tensorrt" = "." }


[project.optional-dependencies]
cuda = [
  "nvidia-stub>=0.0.1",
  "tensorrt-cu12>=10.3.0",
  "tensorrt-cu12-bindings>=10.3.0",
  "tensorrt-cu12-libs>=10.3.0",
  "onnxscript>=0.0.1",
  "tensorrt",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[tool.uv.sources]
"tensorrt-cu12" = [{ index = "nvidia", extra = "cuda" }]
"tensorrt-cu12-libs" = [{ index = "nvidia", extra = "cuda" }]
"tensorrt-cu12-bindings" = [{ index = "nvidia", extra = "cuda" }]
"tensorrt" = [{ index = "nvidia", extra = "cuda" }]

[project.entry-points."comfyui.custom_nodes"]
comfyui_tensorrt = "comfyui_tensorrt"